--- a/poems.tex
+++ b/poems.tex
@@ -94,14 +94,15 @@
 % TITLE
 % ======================================================================
 \begin{document}
-\frontmatter
 \pagestyle{empty}
-\pagecolor{darkvintageorange}
-\color{white} % Sets the text color to white
+\cleardoublepage
+\mbox{ }
+\cleardoublepage
+\frontmatter
 \begin{center}
   \vspace*{48pt}
   \hfill {\fontsize{86}{52}\sffamily\bfseries poems}
-  \\
+  \\[12pt]
   \hrule height 1pt
   \hfill {\fontsize{24}{52}\sffamily carol carpenter}
   \vfill
@@ -111,12 +112,10 @@
 \end{center}
 \color{black} % Sets the text color to white
 
-
 \clearpage
-\pagecolor{white}
 \mbox{}
 \\[36pt]
-Carol Carpenter. 1943--2016.  poems \& stories. Colloquial Books.  New
+Carol Carpenter (1943--2016).~\textit{Poems}.~Colloquial Books.~New
 York. 
 \\[12pt]
 \begin{center}
@@ -709,7 +708,7 @@ Deer leap from his lips.\\
 Elephants trumpet silver surprise.\\
 Red ladybugs speckle the air.\\
 Daisies spring from children's toes.
-
+\clearpage
 The balloon man burps each balloon,\\
 leaves space for breath and unicorns.
 
@@ -1094,7 +1093,7 @@ into my kitchen. I admit\\
 I lost a button, stitched a seam,\\
 removed spots, washed that robe\\
 until almost all the blue is gone.
-
+\clearpage
 I wrap my history around me,\\
 glory in its blue chenille tales.
 
@@ -3468,7 +3467,7 @@ and left me here alone.
 \clearpage
 \section{The Guided Tour}
 
-I.  At Pioneer Square, Seattle
+{\bf I.  At Pioneer Square, Seattle}
 
 A ticket gets us in\\
 and we descend, step by wooden step,\\
@@ -3488,7 +3487,7 @@ more dirt. Enough dirt\\
 to smother us in open catacombs\\
 beneath our crepe-soled shoes.
 
-II.  Tourists Once Removed Automatically
+{\bf II.  Tourists Once Removed Automatically}
 
 We load our auto-focus cameras\\
 with high-speed film\\
@@ -3504,7 +3503,7 @@ Our flash backfills unnatural light\\
 of electric glass as we sight\\
 our guide and shoot.
 
-III. Photographing the Blind Woman's Music
+{\bf III. Photographing the Blind Woman's Music}
 
 No one resurrects\\
 or restores or ignores the blind woman\\
@@ -3542,7 +3541,7 @@ We know the finish, that whirring noise,\\
 that internal winding cellulose\\
 from one black spool to the other.
 
-IV.  In the Darkroom at Home
+{\bf IV.  In the Darkroom at Home}
 
 Under the developer,\\
 the blind woman evolves again\\
@@ -3556,8 +3555,7 @@ and shapes echoes from another place\\
 that settle deep in our bellies\\
 and we hear our own eyes blink in light.
 
-
-V.  Squares of Time in Photo Albums Everywhere
+{\bf V.  Squares of Time in Photo Albums Everywhere}
 
 We carry away\\
 slices of places and people\\
@@ -4862,7 +4860,7 @@ street names. I believed only\\
 in myself and the apple tree I climbed\\
 at the corner where I caught everyone\\
 doing something.
-
+\clearpage
 If I were patient as the pink-tinged flowers\\
 time would turn into apples\\
 sweet enough to eat.
@@ -5274,7 +5272,7 @@ slashing passers-by (who stop to stare).
 
 
 \clearpage
-\section{Mata Hari Goes Undercover in Our Neighborhood}
+\section{Mata Hari Goes Undercover\\ in Our Neighborhood}
 
 Crouched behind Dad's yellow Buick,\\
 my brother and I spied on Mrs. Valentino,\\
@@ -5337,7 +5335,7 @@ Just flesh and muscle. Streams of mothermilk.
 
 
 \clearpage
-\section{Midnight Shift at the GM Body and Assembly Plant}
+\section{Midnight Shift\\ at the GM Body and Assembly Plant}
 
 No one ever says\\
 Hank is losing the touch\\
@@ -5484,8 +5482,9 @@ maybe something with my name on it.
 
 
 \clearpage
-\section{Monarch on my Windowpane\\
-}\emph{For Nancy, who counts butterflies}
+\section{Monarch on my Windowpane}
+
+\emph{For Nancy, who counts butterflies}
 
 I do not see you land on glass,\\
 do not look up\\
@@ -6134,7 +6133,7 @@ The legacy of loss.
 \section{Northville Convergence:\\
   An Architectural Landscape}
 
-1820s: Settling In the Natural Way
+{\bf 1820s: Settling In the Natural Way}
 
 A free place, a space\\
 of imagined shadows chased\\
@@ -6170,8 +6169,8 @@ of the moon their calendars. Days colored
 by seasons: cyclical, rhythmic\\
 as their heartbeats, that pulse of blood,\\
 a natural way of settling in.
-
-1830-1900: Truth Tellers
+\clearpage
+{\bf 1830-1900: Truth Tellers}
 
 Churches rose from farm soil, homes\\
 of worship. Presbyterian first, then Methodist,\\
@@ -6190,9 +6189,9 @@ rye hoed and harvested. Stored\\
 in barns whose plank sides weathered\\
 over winters, swelled with water. Warped\\
 doors shaped themselves, skimmed snow,\\
-cleared paths for women gathering eggs, warm, white/brown ovals. Smooth/
+cleared paths for women gathering eggs, warm, white/brown ovals.
 
-rough buildings brick or frame, one\\
+Smooth/rough buildings brick or frame, one\\
 story or two. Joined in rural\\
 celebration: a community at work.\\
 Houses, a school, the doctor's office\\
@@ -6203,8 +6202,7 @@ from loads of produce,\\
 logs, and livestock, even\\
 people moving up and down steps, outside/
 
-inside, entering/\\
-leaving one place for another.\\
+inside, entering/leaving one place for another.\\
 Mills processed logs, split\\
 into more structures. Victorian\\
 architecture: intricate carvings, parapets\\
@@ -6264,7 +6262,7 @@ architecture; the story\\
 sung by warblers perched\\
 on gables, the highest peaks.
 
-Early to Mid 1900s: A Gathering Together
+{\bf Early to Mid 1900s: A Gathering Together}
 
 Fire's flames licked up houses, Park House\\
 Hotel, Globe Furniture Factory, other\\
@@ -6341,8 +6339,7 @@ together. \emph{The Record} headlines,\\
 and photo cutlines captured past,\\
 present, future: preserved in print.
 
-
-1950-1994: Soul Sketches
+{\bf 1950-1994: Soul Sketches}
 
 Sketchers, artists all, drawing\\
 what they saw. Thin lines\\
@@ -6914,6 +6911,7 @@ disillusion you about clean,\\
 uncluttered places I have been.\\
 I have also watched the rush\\
 as city feet crack concrete walks.\\
+\clearpage
 We embrace the magic of open space.\\
 We clench our fists\\
 when we recognize\\
@@ -8267,6 +8265,7 @@ you be safe as Mama plots escape\\
 from windows, roofs, summer\\
 heat you be carryin' all this time\\
 on yo' back 'cause you, too, dream\\
+\clearpage
 Louisiana days, long and sweet\\
 hours of eatin' crawfish, laughin'\\
 at fools don't know no better.\\
@@ -8627,6 +8626,7 @@ Pulling down the felt hat,\\
 she drops her soiled chin\\
 into her sunken chest,\\
 coughs quietly into her bag,\\
+\clearpage
 rummages for a cigarette stub\\
 found on yesterday's sidewalk,\\
 next to the garbage can\\
@@ -8860,6 +8860,7 @@ a string as the kite catches a wind current.
 Our kite rides the waves of pink-tinged sky;\\
 soars, glides, rises, trails a blue silk tail,\\
 chants some sweet language of clouds and air.\\
+\clearpage
 We cut the strings\\
 at dusk when colors fade,\\
 before night envelops us.
@@ -9762,6 +9763,7 @@ of truth.
 Blow on one blade\\
 of green grass; whistle\\
 long and loud your own tune\\
+\clearpage
 of happiness, of friends forever\\
 true, of books you read,\\
 of what you do along the way\\
@@ -10543,7 +10545,7 @@ Her feet slip-slide to my table.\\
 She looks at no one, just sets\\
 dishes in front of me. Her no-polish\\
 no-shape, frayed nails betray her.
-
+\clearpage
 She walks many miles\\
 every year and arrives\\
 nowhere she ever wants to go,\\
@@ -10860,6 +10862,7 @@ my bundle of brown and red,\\
 in a shoebox under the cherry tree.\\
 Let this be the end. I refuse\\
 to see this as an omen.\\
+\clearpage
 Death would only dare\\
 present itself as a blue-black starling,\\
 strut across frozen ground\\
@@ -11388,6 +11391,7 @@ the painted lady\\
 lay her froth of eggs and leave me\\
 alone in wetlands
 
+\clearpage
 where I stand on one leg\\
 in the warm shallows\\
 like a blue heron. I choose
@@ -11623,9 +11627,10 @@ I circle this monastery three times,\\
 prostrate myself on the threshold,\\
 plant a prayer flag for freedom.
 
-
+\clearpage
+\pagestyle{empty}
 \cleardoublepage
-\section{About the Author}
+\mbox{ }
 
 \clearpage
 
