--- a/stories.tex
+++ b/stories.tex
@@ -117,7 +117,7 @@
 \pagecolor{white}
 \mbox{}
 \\[36pt]
-Carol Carpenter. 1943--2016.  Stories.  Colloquial Books.  New
+Carol Carpenter (1943--2016).~\textit{Stories}.~Colloquial Books.~New
 York. 
 \\[12pt]
 \begin{center}
@@ -691,6 +691,7 @@ reconfirming that men are more trouble than they're worth.
 
 ``You know he insists on being called Charles. Not Charlie or Chuck.
 Charles,'' she says, draw­ing out the syllables. ``Nothing like your
+\clearpage
 father, rest his soul. At least your father knew how to have a bit of
 fun.''
 
@@ -936,7 +937,8 @@ floor by her chair.
 
 ``Harry,'' I warn, glaring at her and refusing to look at the man, who
 must think we're both crazy. ``It's time for us to go. That plane leaves
-early tomorrow for Florida.''\\
+early tomorrow for Florida.''
+
 ``Sit down and rest awhile. Plenty of time. Go on, sit,'' she says,
 motioning me toward the empty chair the man has pulled out for me.
 
@@ -1378,6 +1380,7 @@ themselves. She looks like me in the ``before'' picture-flat chest,
 slumped shoulders, brown hair. She's even biting the inside of her lip:
 at least it looks that way to me. The ``after'' picture reminds me of
 Mary Ellen---tight sweater (wonder if it's cashmere), rounded in the
+\clearpage
 right places, blonde hair (maybe it's the lighting), and an easy smile.
 
 All this from a jar of cream. Bust increaser that need only be applied
@@ -1810,7 +1813,9 @@ asks what makes me unhappy.
 ``Purple nail polish, the second day of school, and guys who can't
 fish,'' I tell him as I stub my toe on the dresser.
 
-I'm on my best behavior all week, do the ironing without being asked.
+I'm on my best behavior all week, do the ironing without being
+\clearpage
+asked.
 Even I begin to think I'm going to collapse from so much goodness.
 
 But finally, after we wedge John's suitcase between the tent poles and
@@ -2029,6 +2034,7 @@ the hook. Bet that would make Mary Beth sick.
 
 ``And he calls himself a fisherman?'' We both laugh.
 
+\clearpage
 ``Race you back to camp,'' John says taking a head start. ``I really
 never did like Mary Beth,'' he shouts back over his shoulder.
 
@@ -4449,6 +4455,7 @@ the guy who sat next to me in math, the guy I had a crush on. I pictured
 all the room Johnny would have to spread his tail in my ten-gallon tank.
 I offered the big guy a dollar for the fish. He just sneered at me.
 
+\clearpage
 To this day, I'm convinced that the big guy was really thirteen. He
 cheated. I know that in my heart. Just like I know he dumped that
 glorious Siamese Fighting Fish down the sewer after the girls left.
@@ -4725,7 +4732,9 @@ little boy playing in the sprin­kler. ``It's not right digging up my
 flowers like that.''
 
 ``No, it's not right,'' he says. He straightens the picture on the wall,
-picks up the glass filled with melted ice, wipes dust from the table, a
+picks up the glass filled with melted ice, wipes dust from the table,
+\clearpage
+a
 flurry of motion as if he's trying to create a breeze that will cool
 her.
 
@@ -7791,14 +7800,15 @@ Mama you can't stay, at least not yet.''
 ``You do that,'' I say, waving and smiling at Marilyn as she walks
 away.''
 
+\vspace*{-3pt}
 {
   \large
 \begin{center}
   $\star \ \ \star \ \ \star$
 \end{center}
 }
-
-The post cards I write to Marilyn and Mama from other cities, other
+\vspace*{6pt}
+The postcards I write to Marilyn and Mama from other cities, other
 states, are brief. There's not much to say. But sometimes I do think
 about going back for a visit, some Halloween when the kids are all
 dressed in costume and the moon is full. And I do stop at palm readers
@@ -7874,7 +7884,9 @@ trip.''
 
 ``Not until I can see where I'm going,'' I snap, wiping my eyes and
 waiting for them to adjust. Directly on my right is a poster of a hand,
-palm upturned, lines intersecting. It spooks me: a hand dis­embodied, no
+palm upturned, lines intersecting. It spooks me: a hand dis-
+\clearpage
+embodied, no
 arm connected to a shoulder, nothing human about it.
 
 ``Ah, come on. Roger will show you the way,'' Eartha gives me that
@@ -7911,7 +7923,9 @@ from her last perm. ``Besides that, you're a helping kind of person.''
 night.'' I watch Eartha tear shreds from the outside edges of her napkin
 and let them flutter down onto the black Formica table top where they
 lay like pigeon feathers. ``Out with it, Eartha,'' I say in my
-schoolteacher voice and lean across the table, closer to her. ``Did you
+schoolteacher voice and lean across the table, closer to her.
+\clearpage
+``Did you
 look at the man behind the counter flipping over those cards with funny
 pictures on them? It's not safe for two women our age to be here.''
 
@@ -8602,7 +8616,9 @@ they all fell through.
 Crack, a board splintered under her. Then another until she dropped
 straight down, still sitting upright in her chair. Peas rolled like
 pinballs in her hair. She looked straight up through the porch to the
-right of the rotted gutters and all she saw was blue sky. Then she heard
+right of the rotted gutters and all she saw was blue sky.
+\clearpage
+Then she heard
 a bell, a pinball scoring the jackpot, as the bald head of a demolition
 worker peeked over the jagged boards and reached down to help her
 up.
@@ -9188,6 +9204,7 @@ fire.'' My face flushed with heat. I felt drowsy, peaceful as if I were
 in a safe place I had never been. ``Enchanted work,'' I could hear
 myself tell her. ``Your very best ever.''
 
+\clearpage
 ``For you, my friend,'' Danielle said. ``I listen. I paint your dream
 over with white. You see with your own eyes how it is love I paint, not
 entrapment.''
